2018-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WritePTIFImage): Allow 1x1 input image to be
	supported.

	* coders/png.c (ReadOneJNGImage): Unconditionally free JDAT chunk
	memory.  Fixes oss-fuzz 8366 "graphicsmagick/coder_JNG_fuzzer:
	Direct-leak in ReadOneJNGImage". (Credit to OSS-Fuzz)

	* coders/tiff.c (WritePTIFImage): Fix leak of pyramid Image list
	if ResizeImage() fails.  Fixes oss-fuzz 8364
	"graphicsmagick/coder_PTIF_fuzzer: Indirect-leak in
	CloneImage". (Credit to OSS-Fuzz)

2018-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Add and use
	ThrowTIFFWriterException() macro to consistently clean-up when
	throwing writer exception.  May fix oss-fuzz 8321
	"graphicsmagick/coder_EPT_fuzzer: Direct-leak in
	TIFFClientOpen". (Credit to OSS-Fuzz)
	(ReadTIFFImage): Add and use ThrowTIFFReaderException() macro to
	consistently clean-up when throwing reader exception.

2018-05-16  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* magick/alpha_composite.h (AlphaCompositePixel): The
	macro definition for MagickAlphaCompositeQuantum in
	alpha_composite.h computes an expression of the form:

	a * b + c * d * e

	Code in function AlphaCompositePixel() (also in
	alpha_composite.h) multiplies the result of this macro
	by variable "delta" as follows:

	delta * a * b + c * d * e

	However, the intended result is actually:

	delta * ( a * b + c * d * e )

	The macro definition has been modified to enclose the
	entire expression in parentheses.

	The effects of this bug were particularly evident at the
	boundary between a stroked polygon and a transparent
	black region. More generally, an incorrect composited
	pixel value was being computed by AlphaCompositePixel()
	whenever the output alpha value was not 100% opaque.

2018-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.tap: Add a test for PTIF format.

	* coders/tiff.c (WritePTIFImage): Fix Image blob referencing in