@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180518"
-#define public MagickPackageReleaseDate "snapshot-20180518"
+#define public MagickPackageVersionAddendum ".020180519"
+#define public MagickPackageReleaseDate "snapshot-20180519"
